--- a/src/ts/tsconfig.json
+++ b/src/ts/tsconfig.json
@@ -1,12 +1,10 @@
 {
-  "compilerOptions": {
-    "module": "es2022",
-    "target": "es5",
-    "allowJs": true,
-    "moduleResolution": "node",
-    "baseUrl": "./src/ts"
-  },
-  "exclude": [
-    "node_modules"
-  ]
+    "compilerOptions": {
+        "module": "es2022",
+        "target": "es5",
+        "allowJs": true,
+        "moduleResolution": "node",
+        "baseUrl": "./src/ts"
+    },
+    "exclude": ["node_modules"]
 }
